--- a/.gitignore
+++ b/.gitignore
@@ -266,3 +266,4 @@ KiteConnect/NoGithub/api_secret
 KiteConnect/NoGithub/password
 KiteConnect/NoGithub/pin
 KiteConnect/NoGithub/user_id
+KiteConnect/Logs/full_logs.txt
